tests/rosetta/out/Fortran/circular-primes.error
gfortran: exit status 1
/tmp/circular-primes.f90:127:51:

  127 |   recursive character(len=100) function showList(xs) result(res)
      |                                                   1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘xs’ at (1)
/tmp/circular-primes.f90:133:13:

  133 |       out = (out + s6)
      |             1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
/tmp/circular-primes.f90:134:21:

  134 |       if (((i < size(xs)) - 1)) then
      |                     1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/circular-primes.f90:131:24:

  131 |     do while ((i < size(xs)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/circular-primes.f90:44:4:

   44 |     q = q((1)+1:size(q))
      |    1
Error: Different shape for array assignment at (1) on dimension 1 (6 and 5)
/tmp/circular-primes.f90:45:4:

   45 |     fq = fq((1)+1:size(fq))
      |    1
Error: Different shape for array assignment at (1) on dimension 1 (6 and 5)
/tmp/circular-primes.f90:46:24:

   46 |     if ((((f /= 2) .and. f) /= 5)) then
      |                        1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/circular-primes.f90:62:20:

   62 |   print *, showList(circs)
      |                    1
Error: Rank mismatch in argument ‘xs’ at (1) (scalar and rank-1)
